--- a/css/style.css
+++ b/css/style.css
@@ -7,18 +7,45 @@ body {
     display: flex;
     width: 100vw;
     height: 100vh;
+    
 }
 
 .box {
-    width: 70vw;
+    width: 200vw;
     height: 100vh;
     background-color: #1a1818;
+    animation: slideFromLeft 6s 1;
+    z-index: 0;
+}
+img {
+    width: 10px;
+    height: 10px;
+}
+.loading {
+    color: red;
+    background-color: red;
+    transform: translate(10%, 100px);
+    z-index: 1;
 }
 
-.triangle {
-    width: 0;
-    height: 0;
-    border-top: 355px solid transparent;
-    border-left: 400px solid #1a1818;
-    border-bottom: 400px solid transparent;
-}
+
+
+  @keyframes slideFromLeft {
+    0% {
+      transform: translateX(-100%);
+    }
+
+    30% {
+        transform: translateX(-80%)
+    }
+
+    50% {
+        transform: translateX(-60%)
+    }
+    70% {
+        transform: translateX(-40%)
+    }
+    100% {
+      transform: translateX(0);
+    }
+  }
