--- a/css/style.css
+++ b/css/style.css
@@ -4,48 +4,73 @@ body {
 }
 
 .main-container {
-    display: flex;
     width: 100vw;
-    height: 100vh;
-    
+    height: 100vh;    
 }
 
 .box {
-    width: 200vw;
+    width: 100vw;
     height: 100vh;
     background-color: #1a1818;
-    animation: slideFromLeft 6s 1;
+    animation: 6s ease-out 0s 1 slideBox;
     z-index: 0;
+    position: relative;
 }
 img {
     width: 10px;
     height: 10px;
 }
+
 .loading {
+    top: 200px;
+    left: 100px;
     color: red;
     background-color: red;
     transform: translate(10%, 100px);
+    animation: 6s ease-out 0s 1 slideLoad;
     z-index: 1;
+    position: absolute;
+    top: 40%;
+    left: 50%;
 }
 
-
-
-  @keyframes slideFromLeft {
+@keyframes slideBox {
     0% {
       transform: translateX(-100%);
     }
 
     30% {
-        transform: translateX(-80%)
+        transform: translateX(-80%);
     }
 
     50% {
-        transform: translateX(-60%)
+        transform: translateX(-60%);
     }
     70% {
-        transform: translateX(-40%)
+        transform: translateX(-40%);
     }
     100% {
       transform: translateX(0);
     }
-  }
+  };
+
+  @keyframes slideLoad {
+    0% {
+        transform: translateX(-100%);
+      }
+  
+      30% {
+          transform: translateX(-80%);
+      }
+  
+      50% {
+          transform: translateX(-60%);
+      }
+      70% {
+          transform: translateX(-40%);
+      }
+      100% {
+        transform: translateX(0);
+      }
+    };
+    
