--- a/css/style.css
+++ b/css/style.css
@@ -1,76 +1,59 @@
 body {
-    background-color: whitesmoke;
+    background-color: #fadc65;
     margin: 0 auto;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .main-container {
-    width: 100vw;
+    display: grid;
+    grid-template-columns: 1fr 5fr 1fr;
+    grid-template-rows: 1fr 10fr 1fr;
+    grid-template-areas: 
+    "top top top"
+    ". middle ."
+    ". bottom bottom2";
+    margin: 20px 20px;
+    width: 96vw;
     height: 100vh;    
 }
 
-.box {
-    width: 100vw;
-    height: 100vh;
-    background-color: #1a1818;
-    animation: 6s ease-out 0s 1 slideBox;
-    z-index: 0;
-    position: relative;
-}
-img {
-    width: 10px;
-    height: 10px;
+.box1 {
+    display: flex;
+    padding: 20px;
+    justify-content: space-between;
+    grid-area: top;
 }
 
-.loading {
-    top: 200px;
-    left: 100px;
-    color: red;
-    background-color: red;
-    transform: translate(10%, 100px);
-    animation: 6s ease-out 0s 1 slideLoad;
-    z-index: 1;
-    position: absolute;
-    top: 40%;
-    left: 50%;
+.box2 {
+    grid-area: middle;
+    align-self: center;
+    text-align: center;
+    padding: 20px;
 }
 
-@keyframes slideBox {
-    0% {
-      transform: translateX(-100%);
-    }
+h1 {
+    font-family: Arial, Helvetica, sans-serif
+}
 
-    30% {
-        transform: translateX(-80%);
-    }
+.box2 p {
+    font-size: 12px;
+}
 
-    50% {
-        transform: translateX(-60%);
-    }
-    70% {
-        transform: translateX(-40%);
-    }
-    100% {
-      transform: translateX(0);
-    }
-  };
+.box2 button {
+    background-color: #25220d;
+    color: white;
+    border-radius: 30px;
+    border: none;
+    width: 150px;
+    height: 30px;
+}
 
-  @keyframes slideLoad {
-    0% {
-        transform: translateX(-100%);
-      }
-  
-      30% {
-          transform: translateX(-80%);
-      }
-  
-      50% {
-          transform: translateX(-60%);
-      }
-      70% {
-          transform: translateX(-40%);
-      }
-      100% {
-        transform: translateX(0);
-      }
-    };
-    
+.box3 {
+    grid-area: bottom;
+    background-color: seagreen;
+}
+
+.box4 {
+    grid-area: bottom2;
+    background-color: sienna;
+}
