--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,11 @@
 body {
     background-color: #fadc65;
     margin: 0 auto;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .main-container {
     display: grid;
-    grid-template-columns: 1fr 5fr 1fr;
+    grid-template-columns: 1fr 3fr 1fr;
     grid-template-rows: 1fr 10fr 1fr;
     grid-template-areas: 
     "top top top"
@@ -23,6 +22,58 @@ body {
     justify-content: space-between;
     grid-area: top;
 }
+
+.logo {
+    display: flex;
+    font-family: 'Raleway', sans-serif;
+    font-size: 20px;
+    font-weight: 700;
+    width: 180px;
+    border-bottom: 2px solid white;
+}
+
+.firstName {
+    color: #25220d;
+}
+
+.lastName {
+    color: rgb(255, 255, 255);
+    margin-left: 12px;
+}
+
+/* HAMBURGER MENU */
+.menu {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+.hamburger {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    width: 3rem;
+    height: 3rem;
+  }
+  
+.hamburger div {
+    width: 2.5rem;
+    border: 2px black solid;
+  }
+
+  .hamburger:hover {
+      cursor: pointer;
+  }
+  a {
+    text-decoration: none;
+  }
+  .side-menu {
+    background-color: rgba(0, 0, 0, 0.377);
+    width: 30vw;
+    height: 50vh;
+    display: none;
+    margin-left: 700px;
+  }
 
 .box2 {
     grid-area: middle;
@@ -51,6 +102,11 @@ h1 {
 .box3 {
     grid-area: bottom;
     background-color: seagreen;
+}
+
+.box3 i {
+    color: black;
+
 }
 
 .box4 {
