--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 body {
-    background-color: #fadc65;
+    background-color: #fadf4b;
     margin: 0 auto;
     font-family: Raleway;
+    overflow: none;
 }
 
 .main-container {
@@ -15,7 +16,7 @@ body {
     margin: 20px 20px;
     width: 96vw;
     height: 94vh;
-    overflow-x: hidden;
+    overflow: none;
 }
 
 .box1 {
@@ -27,7 +28,7 @@ body {
 
 .logo {
     display: flex;
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Raleway' sans-serif;
     font-size: 20px;
     font-weight: 700;
     width: 180px;
@@ -35,12 +36,15 @@ body {
 }
 
 .firstName {
-    color: #25220d;
+    color: #000000;
+    font-family: 'Raleway' sans-serif;
+    font-weight: bolder;
 }
 
 .lastName {
-    color: rgb(255, 255, 255);
-    margin-left: 12px;
+    color: #000000;
+    font-weight: 100;
+
 }
 
 /* HAMBURGER MENU */
@@ -123,9 +127,27 @@ h1 {
     align-items: center;
     grid-area: bottom;
     flex-direction: column;
+    position: relative;
 }
 
-.box3 .scroll {
+.circle2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    left: auto;
+    width: 200px;
+    height: 120px; 
+    background-color: transparent;
+    border-top-left-radius: 130px; 
+    border-top-right-radius: 130px; 
+    border: 30px solid #FFFFFF;
+    border-bottom: 0;
+}
+
+.scroll {
+    margin-top: 50px;
     font-size: 13px;
 }
 .pointer p {
@@ -154,26 +176,18 @@ h1 {
 .circle1 {
     width: 100px;
     height: 100px;
-    border: 20px solid white;
+    border: 20px solid #ffffff;
     position: absolute;
     top: 300px;
     left: 50px;
     border-radius: 100px;
 }
-.circle2 {
-    width: 200px;
-    height: 200px;
-    border: 20px solid white;
-    position: absolute;
-    top: 420px;
-    left: 450px;
-    border-radius: 200px;
-}
+
 
 .triangle {
     width: 150px;
     height: 150px;
-    border: 20px solid white;
+    border: 20px solid #ffffff;
     position: absolute;
     left: 860px;
     transform: rotate(20deg);
@@ -190,3 +204,15 @@ h1 {
       transform: translateY(-5px);
     }
   }
+
+  @media (max-width: 1024px){
+    .circle1 {
+      display: none;
+    }
+    .triangle {
+      display: none;
+    }
+  }
+  
+
+ 
