--- a/css/style.css
+++ b/css/style.css
@@ -83,18 +83,53 @@ body {
     margin: 2px;
   }
 
-  .hamburger:hover {
+.hamburger:hover {
       cursor: pointer;
   }
   a {
     text-decoration: none;
   }
-  .side-menu {
-    background-color: rgba(0, 0, 0, 0.377);
-    width: 30vw;
-    height: 50vh;
-    display: none;
-    margin-left: 700px;
+
+.sidenav {
+    height: 100%;
+    width: 0; 
+    position: fixed;
+    z-index: 1;
+    top: 0; 
+    right: 0;
+    background-color: #111111; 
+    overflow-x: hidden; 
+    padding-top: 60px; 
+    transition: 0.5s; 
+  }
+
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+
+.social {
+    color: #FFFFFF;
+    border-bottom:1px solid #FFFFFF;
+    text-decoration: none;
+    font-size: 25px;
+    padding-left: 8px;
+}
+
+.sidenav a:hover {
+    color: #f1f1f1;
+  }
+
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
   }
 
 .box2 {
