--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
     background-color: #fadf4b;
     margin: 0 auto;
@@ -21,7 +25,7 @@ body {
 
 
   /* --MAIN --*/
-.main-container {
+#page-one {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
     grid-template-rows: 1fr 12fr 4fr;
@@ -30,6 +34,7 @@ body {
     ". middle ."
     "bottom3 bottom bottom2";
     margin: 20px 5px;
+    margin-bottom: 50px;
     width: 96vw;
     height: 94vh;
     overflow: none;
@@ -88,9 +93,9 @@ body {
 .hamburger:hover {
       cursor: pointer;
   }
-  a {
+a {
     text-decoration: none;
-  }
+}
 
 .sidenav {
     height: 100%;
@@ -195,6 +200,12 @@ h1 {
     border-top-right-radius: 130px; 
     border: 30px solid #FFFFFF;
     border-bottom: 0;
+    color: black;
+}
+
+.circle2 a {
+  text-decoration: none;
+  color: black;
 }
 
 .scroll {
@@ -256,6 +267,125 @@ h1 {
     }
   }
 
+  /* Projects Section */
+#page-two {
+    display: grid;
+    grid-template-columns: 30% 70%;
+    grid-template-rows: 30% 70%;
+    grid-template-areas: 
+    "head head"
+    "proj-content proj-content";
+    margin: 10px 5px;
+    width: 96vw;
+    height: 96vh;
+    overflow: none;
+}
+.project-header {
+  margin-top: 10px;
+  grid-area: head;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  position: relative;
+}
+
+span {
+  margin-top:
+}
+
+.box {
+  background-color: white;
+  width: 150px;
+  height: 35px;
+  position: absolute;
+  top: 2px;
+  z-index: -1;
+}
+
+h2 {
+  margin: 0 40px;
+  padding-right: 40px;
+  border-right: 2px solid #000000;
+}
+
+.project-header p {
+  font-size: 15px;
+}
+.project-content {
+  grid-area: proj-content;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  position: relative;
+}
+
+.circle3 {
+  background-color: transparent;
+  width: 200px;
+  height: 200px;
+  border: 15px solid white;
+  border-radius: 200px;
+  position: absolute;
+  left: -125px;
+}
+
+.circle4 {
+  background-color: transparent;
+  width: 130px;
+  height: 130px;
+  border: 15px solid white;
+  border-radius: 200px;
+  position: absolute;
+  left: -90px;
+  top: 35px;
+}
+
+.project-list {
+  width: 500px;
+  margin-left: 200px;
+}
+.project-list ul {
+  list-style: none;
+}
+
+.project-list li  {
+  margin: 1px 15px;
+  padding-left: 15px;
+}
+.project-list a:visited {
+  color: black;
+}
+
+.project-list li:hover {
+  transform: translateY(-5px);
+  transition: 0.2s;
+}
+
+.border {
+    display: flex;
+    position: relative;
+    top: -3px;
+    left: -10px;
+    margin-bottom: 40px;
+  }
+.bullet {
+    background-color: none;
+    width: 8px;
+    height: 8px;
+    border: 5px solid white;
+    border-radius: 100px;
+  }
+
+.line {
+    background-color: white;
+    width: 400px;
+    height: 3px;
+    position: absolute;
+    top: 8px;
+    left: 15px;
+  }
+
+
   @media (max-width: 1024px){
     .circle1 {
       display: none;
@@ -285,6 +415,8 @@ h1 {
     }
 
   }
+
+
   
 
  
