--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body {
 
 
   /* --MAIN --*/
-#page-one {
+#main-section {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
     grid-template-rows: 1fr 12fr 4fr;
@@ -268,7 +268,7 @@ h1 {
   }
 
   /* Projects Section */
-#page-two {
+#projects-section {
     display: grid;
     grid-template-columns: 30% 70%;
     grid-template-rows: 30% 70%;
@@ -404,6 +404,79 @@ h2 {
     width: 100%;
     height: 100%;
   }
+
+
+/* CONTACT-SECTION */
+#contact {
+    display: grid;
+    align-self: center;
+    grid-template-rows: 1fr 1fr;
+    margin: 20px 5px;
+    margin-bottom: 50px;
+    width: 96vw;
+    height: 94vh;
+    overflow: none;
+}
+
+.email-id {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.email-id p {
+font-size: 12px;
+border: 5px solid white;
+margin: 10px;
+padding: 15px 20px;
+
+}
+
+.social-contacts {
+  display: flex;
+  flex-direction: row;
+}
+
+.submit-icon {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+.submit-icon div {
+  background-color: black;
+  color: white;
+}
+
+.submit-icon button {
+  width: 40px;
+  height: 350px;
+  border: none;
+  background-color: black;
+  color: white;
+  font-size: 10px;
+}
+
+.collapse-form {
+  height: 400px; /* 100% Full-height */
+  width: 0; /* 0 width - change this with JavaScript */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Stay on top */
+  bottom: 0; 
+  color: white;
+  background-color: #111; /* Black*/
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 60px; /* Place content 60px from the top */
+  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+}
+
+.collapse-form .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
 
   @media (max-width: 1024px){
     .circle1 {
