--- a/css/style.css
+++ b/css/style.css
@@ -255,18 +255,6 @@ h1 {
     z-index: -1;
 }
     
-@keyframes bounce {
-    0%, 20%, 50%, 80%, 100% {
-      transform: translateY(0);
-    }
-    40% {
-      transform: translateY(-20px);
-    }
-    60% {
-      transform: translateY(-5px);
-    }
-  }
-
   /* Projects Section */
 #projects-section {
     display: grid;
@@ -422,6 +410,7 @@ h2 {
     width: 96vw;
     height: 94vh;
     overflow: none;
+    position: relative;
 }
 
 .email-id {
@@ -457,6 +446,8 @@ padding: 15px 20px;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
+  position: absolute;
+  bottom: 293px; 
 }
 
 .submit-icon button {
@@ -473,9 +464,10 @@ padding: 15px 20px;
 .collapse-form {
   height: 400px;
   width: 0;
-  position: fixed;
+  position: absolute;
   z-index: 1;
-  bottom: 0; 
+  bottom: 88px; 
+  left: 80px;
   color: white;
   background-color: #111;
   overflow-x: hidden;
@@ -488,6 +480,7 @@ padding: 15px 20px;
   right: 25px;
   font-size: 36px;
   margin-left: 50px;
+  color: #fadf4b;
 }
 
 .form-field {
@@ -514,15 +507,34 @@ padding: 15px 20px;
   margin: 20px 0px;
   margin-top: 10px;
   padding: 5px 0px;
-  width:300px;
+  width:200px;
 }
 
 .form-field input:active {
  color: white;
 }
 
+.form-field button {
+  border: 2px solid #fadf4b;
+  background-color: transparent;
+  color: #fadf4b;
+}
 
-  @media (max-width: 1024px){
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-20px);
+  }
+  60% {
+    transform: translateY(-5px);
+  }
+}
+
+@media (max-width: 1024px){
+    
+  /* MAIN-SECTION */
     .circle1 {
       display: none;
     }
@@ -550,6 +562,24 @@ padding: 15px 20px;
       margin-top: -150px;
     }
 
+    /* PROJECTS-SECTION */
+    .line {
+      width: 250px;
+    }
+
+    .project-list {
+      margin: 0 50px;
+      margin-left: 150px;
+    }
+
+    .view-box {
+      display: none;
+    }
+
+ /* CONTACT-SECTION */
+    .collapse-form {
+      left: 50px;
+    }
   }
 
 
