--- a/css/style.css
+++ b/css/style.css
@@ -290,7 +290,7 @@ span {
   z-index: -1;
 }
 
-h2 {
+#projects-section h2 {
   margin: 0 40px;
   padding-right: 40px;
   border-right: 2px solid #000000;
