--- a/css/style.css
+++ b/css/style.css
@@ -258,13 +258,21 @@ h1 {
 }
     
   /* Projects Section */
+
+  /* SLIDER */
+  
+
+  /* END OF SLIDER */
+  
 #projects-section {
     display: grid;
     grid-template-columns: 30% 70%;
-    grid-template-rows: 30% 70%;
+    grid-template-rows: 10% 70% 10% 5%;
     grid-template-areas: 
     "head head"
-    "proj-content proj-content";
+    ". proj-img"
+    ". proj-content"
+    "next next";
     margin: 10px 5px;
     width: 96vw;
     height: 96vh;
@@ -295,7 +303,6 @@ span {
 #projects-section h2 {
   margin: 0 40px;
   padding-right: 40px;
-  border-right: 2px solid #000000;
 }
 
 .project-header p {
@@ -396,6 +403,7 @@ span {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  grid-area: next;
 }
 
 .next-page a:visited {
@@ -449,57 +457,58 @@ padding: 15px 20px;
   font-size: 25px;
 }
 
-.submit-icon {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  bottom: 293px; 
-  text-align: left;
-}
-
-.submit-text {
-  width: 65px;
-}
-.submit-icon button {
-  width: 350px;
-  height: 40px;
-  transform: rotate(-90deg);
-  margin-left: -160px;
-  border: none;
-  background-color: black;
-  color: white;
-  font-size: 12px;
-}
-
-.pointer-right i {
-  font-size: 20px;
-  -moz-animation: bounce-right 2s infinite;
-  -webkit-animation: bounce-right 2s infinite;
-  animation: bounce-right 2s infinite;
-
-}
-
+/*Footer */
 .collapse-form {
-  height: 400px;
-  width: 0;
-  position: absolute;
-  z-index: 1;
-  bottom: 88px; 
-  left: 45px;
-  color: white;
-  background-color: #111;
-  overflow-x: hidden;
-  transition: 0.5s; 
+  display: flex;
+  justify-self: center;
+  align-items: flex-end;
+  width: 400px;
+  position: relative;
 }
 
-.collapse-form .closebtn {
+#footer{
+  background-color: black;
+  color:white;
+  width:100%;
+  height:500px;   /* Height of the footer */
+    -webkit-transition: height 1s, visibility 1s;
+    transition: height 1s, visibility 1s;
   position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
-  color: #fadf4b;
+}
+#footerbuttondown{
+	color: black;
+  font-size: 20px;
+  width:35px;
+  margin: 0 auto;
+  text-align: center;
+	position: relative;
+  top:-20px;
+  border-radius:5px;
+  border-radius:5px;
+}
+#footerbuttonup{
+	color: black;
+  font-size: 20px;
+  width:35px;
+  margin-left:auto;
+  margin-right:auto;
+  text-align: center;
+	position: relative;
+  top:-60px;
+  border-radius:5px;
+  border-radius:5px;
+  visibility:hidden;
+}
+#footercont{
+  position:absolute;
+  top:0px;
+  opacity:1;
+  transition: opacity 1s, visibility 2s, display 2s;
+}
+#centerbutton{
+	align:center;
+  width:100%;
+  content-align: center;
 }
 
 .form-field {
@@ -508,11 +517,13 @@ padding: 15px 20px;
   justify-content: center;
   align-items: center;
   font-size: 12px;
+  margin-left: 25px;
 
 }
 
 .form-field h2 {
   padding: 30px 0;
+  margin: 0;
 
 }
 .form-field label {
@@ -524,15 +535,20 @@ padding: 15px 20px;
   color: rgba(128, 128, 128, 0.527);
   border: 2px solid white;
   margin: 20px 0px;
-  margin-top: 10px;
+  margin-top: 10px;q
   padding: 5px 0px;
-  width:200px;
+  width:330px;
 }
 
 .form-field input:focus {
  color: white;
 }
 
+#contact-message {
+ height: 150px;
+ text-align: left;
+
+}
 .form-field button {
   border: 2px solid #fadf4b;
   background-color: transparent;
@@ -548,18 +564,6 @@ padding: 15px 20px;
   }
   60% {
     transform: translateY(-5px);
-  }
-}
-
-@keyframes bounce-right {
-  0%, 20%, 50%, 80%, 100% {
-    transform: translateX(0);
-  }
-  40% {
-    transform: translateX(-20px);
-  }
-  60% {
-    transform: translateX(-5px);
   }
 }
 
@@ -594,6 +598,7 @@ padding: 15px 20px;
     }
 
     /* PROJECTS-SECTION */
+
     .line {
       width: 250px;
     }
@@ -606,8 +611,3 @@ padding: 15px 20px;
     .view-box {
       display: none;
     }
-
-
-  
-
- 
