--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ a, a:focus, a:active {
     margin: 20px 5px;
     margin-bottom: 50px;
     width: 96vw;
-    height: 94vh;
+    height: 100vh;
     overflow: none;
 }
 
@@ -266,7 +266,7 @@ h1 {
     "next next next";
     margin: 10px 5px;
     width: 96vw;
-    height: 96vh;
+    height: 100vh;
     overflow: none;
 }
 .project-header {
@@ -311,6 +311,7 @@ h1 {
 }
 .slideshow-container img {
   width: 100%;
+  min-width: 605px;
 }
 
 .mySlides {
@@ -393,8 +394,8 @@ h1 {
 .captions-media {
   grid-area: proj-media;
   margin-top: 50px;
-  margin-left:50px;
-  width: 300px;
+  margin-left:40px;
+  width: 400px;
   display: none;
 }
 
@@ -403,13 +404,12 @@ h1 {
 #contact {
     display: grid;
     align-self: center;
-    grid-template-rows: 1fr 1fr;
-    margin: 20px 5px;
-    margin-bottom: 50px;
+    grid-template-rows: 1fr 3fr;
+    margin: 0px 5px;
     width: 96vw;
-    height: 94vh;
-    overflow: none;
+    height: 100vh;
     position: relative;
+    z-index: 0;
 }
 
 .email-id {
@@ -417,6 +417,7 @@ h1 {
   justify-content: flex-end;
   flex-direction: column;
   align-items: center;
+  margin-bottom: -200px;
 }
 
 .email-id p {
@@ -451,6 +452,9 @@ padding: 15px 20px;
   align-items: flex-end;
   width: 400px;
   position: relative;
+  z-index: 2;
+  overflow: hidden;
+
 }
 
 #footer{
@@ -487,6 +491,9 @@ padding: 15px 20px;
   border-radius:5px;
   visibility:hidden;
   cursor: pointer;
+  -moz-animation: bounce 2s infinite;
+  -webkit-animation: bounce 2s infinite;
+  animation: bounce 2s infinite;
 }
 #footercont{
   position:absolute;
@@ -565,6 +572,18 @@ textarea {
   }
 }
 
+@keyframes bounceup {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(5px);
+  }
+  60% {
+    transform: translateY(20px);
+  }
+}
+
 @-webkit-keyframes fade {
   from {opacity: .4}
   to {opacity: 1}
@@ -575,7 +594,7 @@ textarea {
   to {opacity: 1}
 }
 
-@media (max-width: 1257px){
+@media (max-width: 1024px){
     
   /* MAIN-SECTION */
     .circle1 {
@@ -624,12 +643,11 @@ textarea {
      display: none;
    }
    .next-page {
-     background-color: teal;
      margin-left: 50%;
      margin-right: 50%;
   }
 
-  };
+  }
 
   
 
