updated logo and projects header

--- a/css/style.css
+++ b/css/style.css
@@ -52,25 +52,8 @@ a, a:focus, a:active {
     grid-area: top;
 }
 
-.logo {
-    display: flex;
-    font-family: 'Raleway' sans-serif;
-    font-size: 20px;
-    font-weight: 700;
-    width: 180px;
-    border-bottom: 2px solid white;
-}
-
-.firstName {
-    color: #000000;
-    font-family: 'Raleway' sans-serif;
-    font-weight: 800;
-}
-
-.lastName {
-    color: #000000;
-    font-weight: 100;
-
+.logo img {
+  width: 170px;
 }
 
 /* HAMBURGER MENU */
@@ -148,19 +131,18 @@ a:hover {
     padding: 20px;
 }
 
-h1 {
-
+h2 {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bolder;
+    color: black;
+    margin: 0;
+    font-size: 30px;
 }
 
-.box2 .heading {
-    font-weight: 700;
-    font-size: 18px;
-}
-.box2 p {
-    font-size: 12px;
-    font-family: Arial, Helvetica, sans-serif;
+.box2 hr {
+  height: 3px;
+  background-color: white;
+  border: none;
 }
 
 .box2 button {
@@ -173,6 +155,7 @@ h1 {
     font-size: 10px;
     font-family: Raleway;
     font-weight: 700;
+    margin-top: 50px;
 }
 
 .box2 button:hover {
@@ -278,13 +261,32 @@ h1 {
   position: relative;
 }
 
-.box {
+.projects-underline, .projects-slant, .projects-upperline {
   background-color: white;
-  width: 150px;
-  height: 35px;
+  height: 5px;
+
+}
+
+.projects-underline {
+  width: 170px;
   position: absolute;
+  top: 40px;
+  left: 40px;
+}
+
+.projects-slant {
+  width: 50px;
+  transform: rotate(-45deg);
+  position: absolute;
+  top: 21px;
+  left: 202px;
+}
+
+.projects-upperline {
+  width: 70%;
+  position: absolute;
+  left: 244px;
   top: 2px;
-  z-index: -1;
 }
 
 #projects-section h2 {
