--- a/css/style.css
+++ b/css/style.css
@@ -623,6 +623,10 @@ textarea {
   #main-section, #projects-section, #contact-section {
     margin: 10px;
   }
+  
+  h2 {
+    font-size: 28px;
+  }
   .projects-upperline {
     width: 40vw;
   }
